added pwa features(installable, offline mode)
Static and dynamic caching of fetch requests for offline mode.

--- a/docs/style.css
+++ b/docs/style.css
@@ -1,37 +1,28 @@
+body{
+	max-width: 100%;
+	overflow-x: hidden;
+}
 h1{
 	text-align: center;
 }
 #container{
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%,-60%);
 	font-family: 'Roboto', sans-serif;
-	width: 26em;
-	height: 20em;
-	padding: 2em;
-	text-align: center;
+
 }
 .select-labels, .select-labels option{
 	width: 10em;
 	padding: .5em;
-	margin-left: .5em;
 	outline: 0;
-	outline: 1px solid grey;
+	border: 1px solid grey;
 }
 #text-input{
-	width: 30em;
+	width: 43%;
 	height:15em;
 	font-family: inherit;
-	outline: 1px solid grey;
+	border: 1px solid grey;
 }
-.btn-container{
-	margin: .5em;
-	display: flex;
-	justify-content: space-between;
-	flex: wrap;
-}
-.btn-container button{
+
+button{
 	padding: .5em;
 	font-size: 16px;
 	background: #fcd568;
@@ -40,6 +31,15 @@ h1{
 	outline: none;
 	box-shadow: 2px 2px grey;
 }
-.btn-container button:hover{
+button:hover{
 	background: #e3bd54;
+}
+@media (max-width : 850px){
+	#select-container{
+		text-align: center;
+		align-content: center;
+		display: inline-flex;
+		flex-direction: column;
+		flex-wrap: wrap;
+	}
 }
